--- a/force-app/main/default/lwc/pokeDetailInfo/pokeDetailInfo.html
+++ b/force-app/main/default/lwc/pokeDetailInfo/pokeDetailInfo.html
@@ -14,8 +14,8 @@
                 <p style="color: whitesmoke; font-size:xx-large">{pokemon.data.Name}</p>
             </div>
             <div class="hyw">
-                <p>Heigth: {pokemon.data.Heigth__c}</p>
-                <p>Weigth: {pokemon.data.Weigth__c}</p>
+                <p>Heigth: {pokemon.data.Heigth__c} ft.</p>
+                <p>Weigth: {pokemon.data.Weigth__c} lbs.</p>
             </div>
             <section style="display: flex; flex-direction:column; align-items:center">
                 <div class="atributes" style="border-top-color:grey; border-inline-color:grey">
