Se modifican los links ya que cloudinary los cambio

--- a/force-app/main/default/lwc/pokeContainer/pokeContainer.html
+++ b/force-app/main/default/lwc/pokeContainer/pokeContainer.html
@@ -61,7 +61,7 @@
     </template>
     <template if:false={count}>
         <div style="display: flex; flex-direction:column; align-items:center; gap: 10px">
-            <img src="https://res.cloudinary.com/dpsc3qokx/image/upload/c_scale,w_330/v1676562210/klipartz.com_xnbpqb.png" alt="">
+            <img src="https://res.cloudinary.com/dpsc3qokx/image/upload/v1676562210/PokeApp/klipartz.com_xnbpqb.png" alt="">
             <p style="font-size: x-large;">La búsqueda no obtuvo resultados</p>
         </div>
     </template>
